--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,8 @@ django-cors-headers==2.2.0
 idna==2.6
 mysqlclient==1.3.12
 Pillow==5.1.0
+python-dateutil==2.7.2
 pytz==2018.4
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
